# altlinux-test-job

./: pyproject.toml
altlinux_test_job/: cli.py  get_diff_engine.py
altlinux_test_job/scripts/: generete_diff_engine.py
